# platform.core.appfw.slp-pkgmgr

./: AUTHORS  CMakeLists.txt  org.tizen.slp.pkgmgr.conf.in  org.tizen.slp.pkgmgr.service.in  pkg_path.conf.in  pkgmgr-client.manifest  pkgmgr-installer.manifest  pkgmgr-parser.manifest  pkgmgr-server.manifest  pkgmgr.manifest  pkgmgr.patch.sh.in  pkgmgr.pc.in  project.config  queue_status  test.sh
client/: CMakeLists.txt  pkgmgr.pc.in
client/include/: comm_client.h  comm_config.h  package-manager.h  pkgmgr-api.h  pkgmgr-dbinfo.h  pkgmgr-debug.h  pkgmgr-info.h  pkgmgr-internal.h
client/src/: comm_client_gdbus.c  pkgmgr-dbinfo.c  pkgmgr-info.c  pkgmgr-internal.c  pkgmgr.c
comm/: CMakeLists.txt  SLP_package_manager_frontend_backend_PG.h  build.sh  comm_client.c  comm_client.h  comm_client_dbus.c  comm_client_gdbus.c  comm_config.h  comm_debug.h  comm_pkg_mgr.xml  comm_pkg_mgr_server.c  comm_pkg_mgr_server.h  comm_socket.c  comm_socket.h  comm_socket_client.c  comm_socket_client.h  comm_status_broadcast.xml  comm_status_broadcast_server.c  comm_status_broadcast_server.h  comm_status_broadcast_server_dbus.c  comm_status_broadcast_signal_marshaller.list  error_report.h  pkgmgr-installer-client.pc.in  pkgmgr-installer-status-broadcast-server.pc.in  pkgmgr-installer.pc.in  pkgmgr_installer.c  pkgmgr_installer.h  pkgmgr_installer_config.h
comm/test/: CMakeLists.txt  test_comm_client.c  test_comm_pkg_mgr_server.c  test_comm_socket.c  test_comm_status_broadcast_server.c  test_pkgmgr_installer.c
debian/: changelog  control  libpkgmgr-client-0.install.in  libpkgmgr-client-0.postinst  libpkgmgr-client-dev.install.in  libpkgmgr-installer-dev.install.in  libpkgmgr-installer.install.in  libpkgmgr-types-dev.install.in  pkgmgr-server.install.in  pkgmgr-server.postinst  rules
include/: SLP_package_manager_PG.h  package-manager-debug.h  package-manager-plugin.h  package-manager-types.h  package-manager.h  pkgmgr-dbinfo.h
installer/: CMakeLists.txt  pkgmgr_installer.c  pkgmgr_installer.h  pkgmgr_installer_config.h  pkgmgr_installer_debug.h  pkgmgr_installer_info.h
installers/sample/: CMakeLists.txt  sample_backend.c  sample_backendlib.c  sample_parserlib.c
packaging/: pkgmgr.changes  pkgmgr.conf  pkgmgr.manifest  pkgmgr.spec  slp-pkgmgr.spec
parser/: CMakeLists.txt  build.sh  manifest.xsd.in  pkgmgr-parser.pc.in  pkgmgr_parser.c  pkgmgr_parser.h  pkgmgr_parser_db.c  pkgmgr_parser_db.h  pkgmgr_parser_internal.h  preload_list.txt.in
po/: POTFILES.in  en_GB.po  ja_JP.po  ko_KR.po  package-manager.pot  update-po.sh
server/: CMakeLists.txt  org.tizen.pkgmgr.conf.in  org.tizen.pkgmgr.service.in  org.tizen.slp.pkgmgr.conf.in
server/include/: pkgmgr-server.h  pm-queue.h
server/po/: POTFILES.in
server/src/: pkgmgr-server.c  pm-queue.c  request.c
tool/: 10_package-manager-add.post  CMakeLists.txt  org.tizen.pkgmgr-install.desktop.in  org.tizen.pkgmgr-install.xml.in  pkg_clearcache.c  pkg_cmd.c  pkg_cmd_WA.c  pkg_createdb.c  pkg_createdb_user.c  pkg_fota.c  pkg_getsize.c  pkg_info.c  pkg_initdb.c  pkg_initdb_user.c  pkg_install_ug.c  pkg_privilege.c  pkg_recovery.sh.in  pkg_smack.c  pkg_syncdb.c  pkg_syncdb_user.c  pkgcmd.wrapper  pkgmgr-install.c  stress_test.py
types/: CMakeLists.txt  pkgmgr-types.pc.in
types/include/: package-manager-plugin.h  package-manager-types.h
