CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
SET(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS true)
SET(CMAKE_SKIP_BUILD_RPATH true)

PROJECT(package-manager C)
INCLUDE(TizenCommon)
SET(VERSION_MAJOR 0)
SET(VERSION ${VERSION_MAJOR}.1.68)

SET(PREFIX ${CMAKE_INSTALL_PREFIX})
SET(EXEC_PREFIX "\${prefix}")
SET(LIBDIR ${LIB_INSTALL_DIR})
SET(INCLUDEDIR "\${prefix}/include")

SET(PKGMGR_CLIENT "pkgmgr-client")

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fvisibility=hidden -g -Wall")

INCLUDE_DIRECTORIES(include)
INCLUDE_DIRECTORIES(comm)

INCLUDE(FindPkgConfig)

ADD_SUBDIRECTORY(comm)
ADD_SUBDIRECTORY(server)
ADD_SUBDIRECTORY(client)
ADD_SUBDIRECTORY(tool)
ADD_SUBDIRECTORY(types)
